--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.15.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.469.0",
@@ -35,17 +36,21 @@
     "next": "^15.3.4",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-day-picker": "^9.10.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-flip-toolkit": "^7.2.4",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.16.0",
     "react-syntax-highlighter": "^15.6.1",
     "shiki": "^1.24.4",
+    "simplex-noise": "^4.0.3",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
