--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@tabler/icons-react": "^3.28.1",
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
@@ -28,9 +30,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "cobe": "^0.6.4",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.15.0",
     "gsap": "^3.13.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "motion": "^12.18.1",
     "next": "^15.3.4",
@@ -42,9 +46,11 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-flip-toolkit": "^7.2.4",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.16.0",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^3.2.1",
     "shiki": "^1.24.4",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.7.1",
