--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/utils": "^10.18.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -49,6 +50,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.16.0",
+    "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^3.2.1",
     "shiki": "^1.24.4",
